renamed Int to Fixnum. closes 125.
--HG--
rename : include/yog/int.h => include/yog/fixnum.h
rename : src/int.c => src/fixnum.c

--HG--
extra : convert_revision : 1646c60f4ded1043854111c5809e576def42ca3f

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,12 +23,12 @@ COMMON_SOURCES = arg.c \
 	error.c \
 	eval.c \
 	exception.c \
+	fixnum.c \
 	float.c \
 	frame.c \
 	function.c \
 	gc.c \
 	inst.c \
-	int.c \
 	klass.c \
 	lexer.c \
 	main.c \
